# overloadable

./: MANIFEST.in  Makefile  README.rst  pyproject.toml
docs/: CNAME  index.html  v1.0.rst  v1.1.rst
src/overloadable/: __init__.py  __main__.py  core.py
src/overloadable/core/: Overloadable.py
src/overloadable/tests/: __init__.py  test_classmethod.py  test_example_2.py  test_foo.py  test_func.py  test_legacy.py  test_method.py  test_staticmethod.py
