[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "copyable>=1.0,<2",
    "datarepr>=1.1,<2",
    "setdoc>=1.2.20,<2",
]
description = "This projects allows overloading."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "overloadable"
readme = "README.rst"
requires-python = ">=3.11"
version = "1.1.6"

[project.urls]
Download = "https://pypi.org/project/overloadable/#files"
Index = "https://pypi.org/project/overloadable/"
Source = "https://github.com/johannes-programming/overloadable/"
Website = "https://overloadable.johannes-programming.online/"
